--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "homepage",
   "version": "0.1.0",
   "private": true,
+  "homepege": "https://www.uehr.co/homepage",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -30,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
   }
 }
