--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "homepage",
   "version": "0.1.0",
   "private": true,
-  "homepege": "https://www.uehr.co/homepage",
+  "homepege": "https://www.uehr.co/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
